--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color: #efefef;
+    color: #333333;
+    font-size: 14px;
+}
+.nav{
+    display: flex;
+    justify-content: center ;
+    list-style-type: none;
+    padding-left: 0;
+}
+.nav>li{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.nav>li>a{
+    text-decoration: none;
+    color: #333333;
 }
