--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,17 @@ body{
     background-color: transparent;
     border: 2px solid  #66C05D;
     padding: 10px 15px;
+    margin-left: 20px;
+}
+.header-bottom{
+    padding: 15px 0;
+}
+.header-bottom .nav{
+    font-size: 16px;
+    margin: 0;
+}
+hr{
+    border: none;
+    background-color: #efefef;
+    height: 1px;
 }
