--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,28 @@ hr{
     background-color: #efefef;
     height: 1px;
 }
+.banner{
+    background-image: url(../img/bg.png.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    color: #fff;
+}
+.title{
+    font-size: 48px;
+    font-weight: 700;
+}
+.banner p{
+    margin-bottom: 50px;
+    max-width: 308px;
+}
+.btn{
+    text-decoration: none;
+    color: #fff;
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid  #fff;
+    padding: 10px 15px;
+}
