--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ body{
     border: 2px solid  #66C05D;
     padding: 10px 25px;
     margin-left: 36px;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+.header-info button:hover{
+    background-color:  #66C05D;
 }
 .header-bottom{
     padding: 20px 0 27px 0;
@@ -102,4 +107,9 @@ hr{
     background-color: transparent;
     border: 2px solid  #fff;
     padding: 9px 47px;
+    transition: 0.2s ease;
+}
+.btn:hover{
+    background-color: #fff;
+    color: #333333;
 }
