--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ hr{
     font-weight: 700;
     margin-bottom: 39px;
 }
+.title-h2{
+    font-size: 24px;
+    font-weight: 700;
+}
 .banner p{
     margin-bottom: 57px;
     max-width: 315px;
@@ -112,4 +116,80 @@ hr{
 .btn:hover{
     background-color: #fff;
     color: #333333;
+}
+.bg-white{
+    background-color: #fff;
+}
+.bg-green{
+    background-color: #66C05D;
+    color: #fff;
+    padding: 15px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.bg-green-item{
+    flex: 0 0 60%;
+}
+.bg-green-img{
+    text-align: center;
+    flex: 0 0 40%;
+}
+.bg-green h3{
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 0;
+}
+.bg-green input{
+    font-size: 14px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 10px 15px;
+}
+.bg-green .btn{
+    display: block;
+    text-align: center;
+    max-width: 150px;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 0 30px;
+}
+.grid-item-title{
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+.grid-item-img{
+    grid-column: 4/5;
+    grid-row: 1/2;
+    text-align: center;
+}
+.grid-item-left{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+.grid-item-rigth{
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+.grid-item-catalog{
+    text-align: center;
+}
+.grid-item-catalog .bg-white{
+    padding: 15px 30px;
+}
+.grid-price{
+    font-size: 21px;
+    font-weight: 500;
+}
+.grid-btn{
+    border-radius: 20px;
+    background-color: #66C05D;
+    color: #fff;
+    border: 2px solid  #66C05D;
+    padding: 10px 25px;
+    text-decoration: none;
+    transition: 0.2s ease;
+    cursor: pointer;
 }
