--- a/css/style.css
+++ b/css/style.css
@@ -123,38 +123,50 @@ hr{
 .bg-green{
     background-color: #66C05D;
     color: #fff;
-    padding: 15px 30px;
+    padding: 34px 41px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .bg-green-item{
-    flex: 0 0 60%;
+    flex: 0 0 55%;
 }
 .bg-green-img{
     text-align: center;
-    flex: 0 0 40%;
+    flex: 0 0 31%;
 }
 .bg-green h3{
     font-size: 18px;
     font-weight: 700;
     margin-top: 0;
+    margin-bottom: 20px;
+}
+.bg-green p{
+    line-height: 1.5;
+    margin-bottom: 24px;
 }
 .bg-green input{
     font-size: 14px;
     border: 1px solid #fff;
     border-radius: 20px;
-    padding: 10px 15px;
+    padding: 9px 15px;
+    width: 100%;
+    max-width: 225px;
+    box-sizing: border-box;
 }
 .bg-green .btn{
     display: block;
     text-align: center;
-    max-width: 150px;
+    max-width: 166px;
+    padding: 8px 0;
+}
+.catalog{
+    padding-top: 60px;
 }
 .grid{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 0 30px;
+    grid-gap: 19px 30px;
 }
 .grid-item-title{
     grid-column: 1/4;
@@ -168,27 +180,39 @@ hr{
 .grid-item-left{
     grid-column: 1/3;
     grid-row: 3/4;
+    margin-top: 80px;
 }
 .grid-item-rigth{
     grid-column: 3/5;
     grid-row: 3/4;
+    margin-top: 80px;
 }
 .grid-item-catalog{
     text-align: center;
 }
 .grid-item-catalog .bg-white{
-    padding: 15px 30px;
+    padding: 23px 30px 34px 30px;
+}
+.thumb{
+    margin-bottom: 14px;
+}
+.grid-title{
+    line-height: 1.5;
+    margin-bottom: 0;
 }
 .grid-price{
     font-size: 21px;
     font-weight: 500;
+    margin-top: 14px;
+    letter-spacing: 1px;
+    margin-bottom: 25px;
 }
 .grid-btn{
-    border-radius: 20px;
+    border-radius: 30px;
     background-color: #66C05D;
     color: #fff;
     border: 2px solid  #66C05D;
-    padding: 10px 25px;
+    padding: 6px 41px;
     text-decoration: none;
     transition: 0.2s ease;
     cursor: pointer;
