add footer-bottom and styles for it

--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,16 @@ hr{
     transition: 0.2s ease;
     cursor: pointer;
 }
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    color: #828282;
+    padding: 15px 0;
+}
+.footer-bottom p{
+    margin: 0;
+}
+.footer-bottom a{
+    color: #828282;
+    text-decoration: none;
+}
