--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,58 @@ hr{
     transition: 0.2s ease;
     cursor: pointer;
 }
+.footer-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer-info span{
+    font-size: 16px;
+    margin-left: 36px;
+}
+.footer-info button{
+    font-size: 14px;
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid  #66C05D;
+    padding: 10px 25px;
+    margin-left: 36px;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+.footer-info button:hover{
+    background-color:  #66C05D;
+}
+.social{
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding-left: 0;
+}
+.social-item{
+    margin-right: 20px;
+}
+.social-link{
+    display: block;
+    width: 45px;
+    height: 45px;
+    border: 2px solid #66C05D;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.social-youtube{
+    background-image: url(../img/youtube.svg.svg);
+}
+.social-vk{
+    background-image: url(../img/vk.svg.svg);
+}
+.social-fb{
+    background-image: url(../img/fb.svg.svg);
+}
+.social-instagram{
+    background-image: url(../img/instagram.svg);
+}
 .footer-bottom{
     display: flex;
     justify-content: space-between;
